# basic_qml

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  main.qml
cmake/Android/: AddQtAndroidApk.cmake  AndroidManifest.xml.in  build.gradle.5.14.in  build.gradle.5.15.in  build.gradle.in  qtdeploy.json.in  readme.md
cmake/iOS/: MacOSXBundleInfo.plist.in
